--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ bin/
 include/
 lib/
 pip-selfcheck.json
+static_cdn/
+media_cdn/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -60,3 +62,5 @@ docs/_build/
 
 # PyBuilder
 target/
+.idea/
+Scripts/
